--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -16,6 +16,8 @@ body{
     width: 130%;
 }
 
+/* topbar styling ********************************************************/
+
 .topbar{
     width: 100%;
     height: 70px;
@@ -25,7 +27,6 @@ body{
 
 .topbar img{
     width: 4%;
-    /* background-color: #fff; */
 }
 
 .topbar a{
@@ -40,8 +41,49 @@ body{
     color: #8d8d8d;
 }
 
-.signupbox{
+/* Sign Up page ********************************************************/
+
+.signupsection{
     width: 100%;
-    height: 630px;
-    background-color: gray;
+    height: 600px;
+    padding-top: 5%;
+    background-color: #2b3137;
+}
+
+.SignUpBox{
+    width: 28%;
+    height: 495px;
+    background-color: #fff;
+    margin-left: 52%;
+    padding-top: 5px;
+    border-radius: 3px;
+    text-align: center;
+}
+
+.SignUpBox h5{
+    text-align: left;
+    margin-left: 5%;
+    padding-top: 4%;
+}
+
+.SignUpBox input{
+    width: 90%;
+    height: 42px;
+    border-radius: 5px;
+    border: 1px solid lightgray;
+}
+
+.SignUpBox button{
+    width: 90%;
+    height: 65px;
+    border: none;
+    border-radius: 3px;
+    background-color: #2ebc4f;
+    color: #fff;
+    font-size: 17px;
+    transition: .4s;
+}
+
+.SignUpBox button:hover{
+    background-color: #29ac47;
 }
