--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -3,6 +3,10 @@
     padding: 0px;
 }
 
+*{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 div.container.body-content{
     margin: 0px;
     padding: 0px;
@@ -10,6 +14,7 @@ div.container.body-content{
 
 body{
     width: 100%;
+    height: 100%;
 }
 
 .wrapper{
@@ -86,4 +91,33 @@ body{
 
 .SignUpBox button:hover{
     background-color: #29ac47;
+}
+
+/* Login Page ********************************************************/
+
+.LoginBackground{
+    background-color: #f9f9f9;
+    text-align: center; 
+    align-content: center;
+}
+
+.LoginLogo{
+    width: 6%;
+    margin-top: 2%;
+}
+
+.LoginLabel{
+    margin-top: 1.5%;
+    font-size: 25px;
+    font-weight: 100;
+}
+
+.SignInBox{
+    width: 20%;
+    height: 230px;
+    border: 1px solid lightgray;
+    margin-left: 40.5%;
+    margin-top: 1.5%;
+    background-color: #fff;
+    border-radius: 5px;
 }
