--- a/Views/Home/Login.cshtml
+++ b/Views/Home/Login.cshtml
@@ -5,8 +5,8 @@
     <p class="LoginLabel">Sign in to HubGit</p>
     <div class="SignInBox">
         <form asp-action="LoginProcess" asp-controller="Home" method="POST">
-            <label for="UserName" for="Email">Username or Email</label><br>
-            <input type="text" asp-for="UserName" asp-for="Email"><br>
+            <label>Username or Email</label><br>
+            <input type="text" asp-for="UNEInput"><br>
             <label for="Password">Password</label><br>
             <input type="password" asp-for="Password"><br>
             <button type="submit">Sign in</button>
