--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,16 +3,16 @@
 <div class="wrapper">
     <div class="topbar">
         <img style="margin-left: 10%;" src="https://onlinejpgtools.com/images/examples-onlinejpgtools/github-logo-transparent-bg.gif" alt="HubGitCat">
-        <a class="dropdown" href="">Why HubGit?</a>
-        <a href="">Enterprise</a>
-        <a class="dropdown" href="">Explore</a>
-        <a href="">Marketplace</a>
-        <a class="dropdown" href="">Pricing</a>
+        <a class="dropdown" href="/none">Why HubGit?</a>
+        <a href="/none">Enterprise</a>
+        <a class="dropdown" href="/none">Explore</a>
+        <a href="/none">Marketplace</a>
+        <a class="dropdown" href="/none">Pricing</a>
         <form style="display: inline-block; margin-left: 25%;" asp-action="" asp-controller="Home" method="POST">
-            <input type="text" value="Search HubGit">
+            <input type="text" placeholder="Search HubGit">
         </form>
         <a href="/Login">Sign in</a>
-        <a href="">Sign up</a>
+        <a href="/none">Sign up</a>
     </div>
     <div class="signupsection">
         <div class="SignUpBox">
