--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -173,7 +173,8 @@ body{
     height: 1000px;
     display: inline-block;
     vertical-align: top;
-    
+    overflow: auto;
+    position: static;
     padding: 2%;
 }
 
@@ -196,6 +197,7 @@ body{
     width: 100%;
     height: 35px;
     margin-top: 2%;
+    padding-left: 5px;
     border-radius: 5px;
     border: 1px solid lightgray;
 }
@@ -207,4 +209,50 @@ body{
     vertical-align: top;
     background-color: #f5f5f5;
     border-left: 1px solid lightgray;
+}
+
+/* Create Repo Page ********************************************************/
+
+.NewRepoForm{
+    width: 100%;
+    padding: 3% 27%;
+}
+
+.NewRepoForm h3{
+    font-weight: 400;
+}
+
+.NewRepoForm label{
+    font-weight: 500;
+}
+
+.NewRepoForm input, select{
+    height: 34px;
+    border-radius: 3px;
+    border: 1px solid lightgray;
+    background-color: #fafbfc;
+    box-shadow: inset 0 1px 2px rgba(27,31,35,.075);
+    margin-bottom: 2%;
+}
+
+.NewRepoForm p{
+    margin-top: 1%;
+    margin-bottom: 1%;
+}
+
+.NewRepoForm a{
+    margin-bottom: 5%;
+}
+
+.NewRepoFormRadio{
+    height: 12px!important;
+    border: none!important;
+    background-color: none!important;
+    box-shadow: none!important;
+}
+
+.NewRepoFormChunk{
+    width: 100%;
+    border-bottom: 1px solid lightgray;
+    margin-bottom: 2%;
 }
