--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -90,6 +90,46 @@ body{
     padding-left: 5%;
 }
 
+.DropButton{
+    background: none;
+    border: none;
+    color: #fff;
+    font-size: 7px;
+    transition: .4s;
+}
+
+.DropButton:hover{
+    color: #8d8d8d;
+}
+
+.Dropdown{
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: white;
+    right: 0;
+    left: auto;
+    min-width: 160px;
+    overflow: auto;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 100;
+    border-radius: 5px;
+}
+
+.dropdown-content a{
+    color: black;
+    text-decoration: none;
+    display: block;
+}
+
+.show {
+    display: block;
+}
+
 /* Sign Up page ********************************************************/
 
 .signupsection{
