minor changes made to dropdown menu/routing

--- a/Views/Home/AccountPage.cshtml
+++ b/Views/Home/AccountPage.cshtml
@@ -1,1 +1,4 @@
-<h1>@ViewBag.CurrentUser.UserName</h1>
+<div class="wrapper">
+    <partial name="TopBarPartial" view-data="ViewData"/>
+    <h1>@ViewBag.CurrentUser.UserName</h1>
+</div>
