to do list created, and RepoMenu started

--- a/Views/Home/RepoCode.cshtml
+++ b/Views/Home/RepoCode.cshtml
@@ -1,5 +1,4 @@
 <div class="wrapper">
     <partial name="TopBarPartial" view-data="ViewData"/>
-    <h1><img style="width:20px;" src="https://cdn.imgbin.com/22/15/7/imgbin-repository-github-computer-icons-github-6vAEM7F7qce3NEvFibdXV90Dh.jpg" alt=""> 
-    @ViewBag.CurrentUser.UserName / @ViewBag.CurrentRepo.Name</h1>
+    <partial name="RepoMenuPartial" view-data="ViewData"/>
 </div>
