--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -309,3 +309,21 @@ body{
     border-bottom: 1px solid lightgray;
     margin-bottom: 2%;
 }
+
+/* Repo Menu Partial styling ***********************************************/
+
+.RepoMenuPartialContainer{
+    width: 100%;
+    height: 110px;
+    background-color: #fafbfc;
+    margin: 0% 17.55%;
+    padding-top: 25px;
+}
+
+.RepoMenuPartialContainer h1{
+    font-size: 18px;
+}
+
+.RepoMenuPartialContainer a{
+    color: #0366d6;
+}
